-Added empty components with simple routing -Finished first form with proper validation -Organized style sheets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<mat-button-toggle>Toggle me</mat-button-toggle>
-<p>Test test</p>
-<router-outlet />
+<app-header></app-header>
+<div class="top-level-container">
+  <router-outlet />
+</div>
+<app-footer></app-footer>
