--- a/src/styles/_theming.scss
+++ b/src/styles/_theming.scss
@@ -33,8 +33,11 @@ body {
 
 // Global styles for Angular material components
 .form-fields-width {
-  width: 100%;
+  width: 100% !important;
   max-width: 600px;
+  &.slider-label-spacing {
+
+  }
 }
 
 mat-button-toggle-group {
@@ -51,14 +54,20 @@ mat-divider {
   width: 100%;
 }
 
-.sdg-button {
-  margin: 8px 0;
-  background-color: var(--sys-custom-button-color);
+.slider-label-spacing {
+  margin: 20px 10px 0;
 }
 
-// Make sure snackbars are not covering the bottom navigation
-.cdk-overlay-pane {
-  margin-bottom: 64px !important;
+.mat-mdc-slider {
+  width: 100%;
+}
+
+.mat-mdc-raised-button {
+  &.sdg-button {
+    margin: 8px 0;
+    --mdc-protected-button-label-text-color: var(--sys-on-primary);
+    --mdc-protected-button-container-color: var(--sys-custom-button-color);
+  }
 }
 
 .mat-mdc-snack-bar-container {
@@ -72,4 +81,9 @@ mat-divider {
     --mat-mdc-snack-bar-button-color: var(--sys-on-error-container);
     --mdc-snackbar-supporting-text-color: var(--sys-on-error-container);
   }
+}
+
+// Make sure snackbars are not covering the bottom navigation
+.cdk-overlay-pane {
+  margin-bottom: 64px !important;
 }
