--- a/src/app/features/landing-page/landing-page.component.html
+++ b/src/app/features/landing-page/landing-page.component.html
@@ -20,7 +20,8 @@
       </mat-select>
     </mat-form-field>
     <button mat-raised-button
-            class="sdg-button">
+            class="sdg-button"
+            (click)="navigateToRegistration()">
       New registration
     </button>
     <button mat-raised-button
